--- a/Reta-x/res/layout/login.xml
+++ b/Reta-x/res/layout/login.xml
@@ -90,7 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="4"
-            android:background="@drawable/buttons"
+            android:background="@drawable/positive_buttons"
             android:text="@string/SignIn"
             android:textSize="@dimen/TextSize" />
 
@@ -101,7 +101,7 @@
             android:layout_height="wrap_content"
             android:layout_column="2"
             android:layout_row="4"
-            android:background="@drawable/buttons"
+            android:background="@drawable/negative_buttons"
             android:text="@string/Cancel"
             android:textSize="@dimen/TextSize" />
     </GridLayout>
