--- a/Reta-x/res/layout/dashboard.xml
+++ b/Reta-x/res/layout/dashboard.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
+        android:layout_alignParentTop="true" 
+        style="@style/CustomTabWidgetText">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,7 +24,8 @@
             <TabWidget
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content" 
+                style="@style/CustomTabWidgetText">
             </TabWidget>
 
             <FrameLayout
@@ -35,7 +37,8 @@
                     android:id="@+id/tab1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" 
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    >
                 </LinearLayout>
 
                 <LinearLayout
