--- a/Reta-x/res/layout/login.xml
+++ b/Reta-x/res/layout/login.xml
@@ -9,13 +9,13 @@
         android:id="@+id/gridLayout1"
         android:layout_width="wrap_content"
         android:layout_height="300dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="82dp"
-        android:orientation="vertical" 
-        android:background="@color/TransparentWhite">
+         android:layout_centerHorizontal="true"
+         android:layout_below="@+id/imageView1"
+         android:layout_marginTop="50dp"
+        android:background="@color/TransparentWhite"
+        android:orientation="vertical" >
 
-        <TextView
+        <custom.widgets.CustomTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
@@ -26,7 +26,7 @@
             android:textSize="32sp"
             android:textStyle="bold" />
 
-        <TextView
+        <custom.widgets.CustomTextView
             android:id="@+id/logintext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,11 +34,11 @@
             android:layout_marginTop="50dp"
             android:layout_row="1"
             android:gravity="right"
-            android:text="UserName:"
+            android:text="User Name:"
             android:textColor="@color/TextColor"
             android:textSize="@dimen/TextSize" />
 
-        <TextView
+        <custom.widgets.CustomTextView
             android:id="@+id/passwordtext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -59,7 +59,11 @@
             android:background="@drawable/container_dropshadow"
             android:gravity="left"
             android:textColor="#F0000000"
-            android:textSize="@dimen/TextSize" />
+            android:textSize="@dimen/TextSize" >
+
+            <requestFocus />
+        </EditText>
+
         <EditText
             android:id="@+id/passwordedit"
             android:layout_width="200dp"
@@ -106,14 +110,13 @@
             android:textSize="@dimen/TextSize" />
     </GridLayout>
 
-    <TextView
-        android:id="@+id/welcometoretatext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="120dp"
+        android:layout_height="90dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="@string/RetaX"
-        android:textColor="@color/TextColor"
-        android:textSize="@dimen/Heading_Size" />
+        android:layout_marginTop="32dp"
+        android:src="@drawable/retaxlogo" />
 
 </RelativeLayout>
