--- a/Reta-x/res/layout/product_information.xml
+++ b/Reta-x/res/layout/product_information.xml
@@ -194,29 +194,6 @@
         android:textSize="@dimen/Welcome_Titles" >
     </TextView>
 
-    <Button
-        android:id="@+id/product_information_backbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/buttons"
-        android:text="Back"
-        android:textSize="@dimen/TextSize" />
-
-    <TextView
-        android:id="@+id/product_information_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/product_information_backbutton"
-        android:layout_alignLeft="@+id/product_information_welcome"
-        android:layout_marginBottom="14dp"
-        android:background="@drawable/descriptionbackground"
-        android:text="TextView"
-        android:textColor="@color/TextColor"
-        android:textSize="@dimen/TextSize" >
-    </TextView>
-
     <RatingBar
         android:id="@+id/product_information_ratingBar"
         android:layout_width="wrap_content"
@@ -227,13 +204,35 @@
         android:numStars="5"
         android:rating="3.3" />
 
+    <TextView
+        android:id="@+id/product_information_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/product_information_backbutton"
+        android:layout_alignLeft="@+id/product_information_welcome"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/descriptionbackground"
+        android:text="TextView"
+        android:textColor="@color/TextColor"
+        android:textSize="@dimen/TextSize" />
+
     <ImageButton
         android:id="@+id/product_information_imageButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:layout_alignBottom="@+id/product_information_backbutton"
         android:layout_alignLeft="@+id/product_information_description"
-        android:layout_alignTop="@+id/product_information_backbutton"
-        android:layout_marginLeft="33dp"
         android:src="@drawable/voice_chat_icon" />
+
+    <Button
+        android:id="@+id/product_information_backbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="61dp"
+        android:background="@drawable/buttons"
+        android:text="Back"
+        android:textSize="@dimen/TextSize" />
 
 </RelativeLayout>
