--- a/Reta-x/res/layout/stock_take.xml
+++ b/Reta-x/res/layout/stock_take.xml
@@ -8,13 +8,25 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".StockTake" >
 
+    <TextView
+        android:id="@+id/stocktake_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView1"
+        android:layout_alignBottom="@+id/textView1"
+        android:layout_alignRight="@+id/linearLayout1"
+        android:layout_marginRight="48dp"
+        android:text="count"
+        android:textColor="@color/TextColor"
+        android:textSize="@dimen/TextSize" />
+
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/stocktake_count"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="105dp"
+        android:layout_marginTop="63dp"
         android:background="@drawable/circularlayout"
         android:orientation="vertical" >
 
@@ -33,50 +45,54 @@
             android:textSize="40dip" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/stock_take_matchinventory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="104dp"
-        android:background="@drawable/buttons"
-        android:text="Match Inventory"
-        android:textSize="@dimen/TextSize"
-        style="@style/ButtonText" />
-
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/stock_take_matchinventory"
         android:layout_alignLeft="@+id/linearLayout1"
-        android:layout_marginBottom="120dp"
-        android:layout_marginLeft="33dp"
+        android:layout_below="@+id/linearLayout1"
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="76dp"
         android:text="Stock Take"
         android:textColor="@color/TextColor"
         android:textSize="@dimen/TextSize" />
 
-    <TextView
-        android:id="@+id/stocktake_count"
+    <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView1"
-        android:layout_alignBottom="@+id/textView1"
-        android:layout_alignRight="@+id/linearLayout1"
-        android:layout_marginRight="48dp"
-        android:text="count"
-        android:textColor="@color/TextColor"
-        android:textSize="@dimen/TextSize" />
+        android:layout_below="@+id/stocktake_count"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="43dp"
+        android:orientation="horizontal" >
 
-    <Button
-        android:id="@+id/stock_take_resetbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/stock_take_matchinventory"
-        android:layout_toRightOf="@+id/stocktake_count"
-        android:text="Reset" 
-        android:background="@drawable/buttons"
-        style="@style/ButtonText"/>
+        <Button
+            android:id="@+id/stock_take_matchinventory"
+            style="@style/ButtonText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@+id/textView1"
+            android:layout_below="@+id/stock_take_resetbutton"
+            android:background="@drawable/buttons"
+            android:text="Match Inventory"
+            android:textSize="@dimen/TextSize" />
+        <Space 
+            android:layout_height="30dp"
+            android:layout_width="100dp"
+            />
+
+        <Button
+            android:id="@+id/stock_take_resetbutton"
+            style="@style/ButtonText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@+id/linearLayout1"
+            android:layout_below="@+id/stocktake_count"
+            android:layout_marginTop="68dp"
+            android:background="@drawable/buttons"
+            android:text="Reset"
+            android:textSize="@dimen/TextSize" />
+
+    </LinearLayout>
 
 </RelativeLayout>
